--- a/blogPessoal/src/app/home/home.component.html
+++ b/blogPessoal/src/app/home/home.component.html
@@ -1,1 +1,26 @@
-<p>home works!</p>
+<div class="container w-100">
+
+    <div class="row w-100 mt-5">
+        <div class="col-md-12">
+            <h1 class="text-monospace text-center"> Sejam bem-vindes ao meu blog!</h1>
+        </div>
+    </div>
+
+    <div class="row w-100 mt-4 mb-4">
+        <div class="col-md-12">
+            <p class="text-justify text-monospace">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque omnis perferendis ex repellat sunt recusandae minima, modi voluptate non iusto odit facilis eum itaque illum ipsum eveniet cupiditate. Doloremque, doloribus.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi nam veritatis facilis velit obcaecati tempora nisi et adipisci ab animi voluptates fugit maiores, quod, sapiente ratione exercitationem? Non, soluta porro.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, quidem! Reiciendis sunt, praesentium perferendis dignissimos sequi accusamus quisquam aliquam porro? Id animi ullam exercitationem excepturi quibusdam voluptatibus reprehenderit itaque officiis!
+            </p>
+        </div>
+    </div>
+</div>
+
+    <div class="parallax"></div>
+
+    <div class="row w-100 mt-5 mb-5">
+        <div class="col-md-12 w-100 d-flex justify-content-center">
+            <button class="btn btn-outline-dark text-uppercase font-weight-bold">Ver o feed</button>
+        </div>
+    </div>
+
