--- a/blogPessoal/src/app/navbar/navbar.component.html
+++ b/blogPessoal/src/app/navbar/navbar.component.html
@@ -5,13 +5,13 @@
           <span class="navbar-toggler-icon"></span>
         </button>
       
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link text-monospace text-uppercase font-weight-bold p-3 texto" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link text-monospace text-uppercase font-weight-bold p-3" routerLink= '/home'>Home <span class="sr-only">(página atual)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-monospace text-uppercase font-weight-bold p-3 texto" href="#">Feed</a>
+              <a class="nav-link text-monospace text-uppercase font-weight-bold p-3" routerLink= '/feed'>Feed</a>
             </li>
           </ul>
         </div>
