consumo api parte 1

--- a/blogPessoal/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/blogPessoal/src/app/perfil-lateral/perfil-lateral.component.html
@@ -4,7 +4,7 @@
     <img src="https://i.imgur.com/SLWifk8.jpg" class="card-img-top rounded-circle w-75" alt="Imagem de capa do card">
     </div>
     <div class="card-body">
-      <h5 class="card-title text-center text-monospace">Bárbara Elizabeth</h5>
+      <h5 class="card-title text-center text-monospace">{{nome}}</h5>
       <p class="card-text text-center text-monospace">Estudante de desenvolvimento Web Full-Stack na Generation Brasil</p>
 
       <a href="https://www.linkedin.com/in/bemcandido/" class="btn btn-outline-info mb-3 d-flex justify-content-center" target="_blank">LinkedIn</a>
