--- a/blogPessoal/src/app/login/login.component.html
+++ b/blogPessoal/src/app/login/login.component.html
@@ -16,13 +16,13 @@
 
                 <div class="form-group">
                     <label for="exampleInputPassword1">Senha</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+                    <input type="password" class="form-control mb-5" id="exampleInputPassword1" placeholder="Senha">
                 </div>
 
                 <div class="d-flex justify-content-center">
                     <button type="submit" class="btn btn-outline-success w-25">Entrar</button>
                 </div>
-                
+
             </div>
         </div>
     </div>
